# review

./: API_INTEGRATION.md  APK体积优化建议.md  APK体积分析报告.md  BACKEND_API_SPEC.md  BACKEND_REDEEM_CODE_URL_SETUP.md  BATCH_API_SPEC.md  DEVICE_ID_EXPLANATION.md  DOWNLOAD_TROCR_MODEL.md  GRAPHIC_QUESTION_DETECTION.md  GRAPHIC_QUESTION_FILTERING.md  HANDWRITING_RECOGNITION_COMPARISON.md  HANDWRITING_REMOVAL_API.md  HANDWRITING_REMOVAL_API_UPDATE.md  LAYOUT_BASED_DETECTION.md  MIGRATION_API.md  ORDER_BASED_REDEMPTION_API.md  OVERLAY_REMOVAL_GUIDE.md  PADDLEOCR_FINAL_STATUS.md  PADDLEOCR_INTEGRATION.md  PADDLEOCR_INTEGRATION_COMPLETE.md  PADDLEOCR_INTEGRATION_STATUS.md  PADDLEOCR_MANUAL_DOWNLOAD.md  PADDLEOCR_NEXT_STEPS.md  README.md  README_QUESTION_DETECTOR.md  REDEEM_CLAIM_API.md  REDEEM_PAGE_README.md  REDEEM_PAGE_SETUP.md  REDEMPTION_CODE_API.md  REDEMPTION_CODE_IMPLEMENTATION.md  REDEMPTION_CODE_IMPLEMENTATION_GUIDE.md  TROCR_DLL错误解决方案.md  TROCR_下一步操作.md  TROCR_中文模型说明.md  TROCR_快速开始.md  TROCR_模型问题说明.md  TROCR_获取说明.md  TROCR_转换说明.md  TROCR_问题说明.md  TrOCR_INTEGRATION_GUIDE.md  (+31 more)
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/gongkao/cuotifupan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: scoring_config.json
app/src/main/assets/fonts/: README.md
app/src/main/assets/models/: README.md
app/src/main/assets/trocr/: README.md
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/java/com/gongkao/cuotifupan/: MainActivity.kt  SnapReviewApplication.kt
app/src/main/res/: keep.xml
app/src/main/res/drawable/: bg_button_danger.xml  bg_button_primary.xml  bg_button_secondary.xml  bg_button_success.xml  bg_capture_button.xml  bg_color_selector_black.xml  bg_color_selector_blue.xml  bg_color_selector_red.xml  bg_dialog_scanning.xml  bg_dialog_scanning_transparent.xml  bg_floating_button.xml  bg_preferred_badge.xml  bg_question_type.xml  bg_question_type_graphic.xml  bg_success_tip.xml  bg_tag_chip_selected.xml  ic_check_white.xml  ic_clear_marks.xml  ic_copy.xml  ic_eraser.xml  ic_font.xml  ic_hand.xml  ic_image_import.xml  ic_image_import_v2.xml  ic_image_import_v3.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_pencil_toggle.xml  ic_redo.xml  ic_undo.xml  selector_circle_checkbox.xml
app/src/main/res/layout/: activity_camera_capture.xml  activity_crop_screenshot.xml  activity_data_migration.xml  activity_deck_manage.xml  activity_flashcard_edit.xml  activity_flashcard_review.xml  activity_flashcards_list.xml  activity_handwriting_note.xml  activity_how_to_get_redeem_code.xml  activity_image_edit.xml  activity_image_fullscreen.xml  activity_image_fullscreen_with_notes.xml  activity_main.xml  activity_manual_import.xml  activity_manual_import_simple.xml  activity_math_practice.xml  activity_math_practice_history.xml  activity_math_practice_result.xml  activity_note_edit.xml  activity_notes_list.xml  activity_question_detail.xml  activity_question_detail_card.xml  activity_question_review.xml  activity_redemption_code.xml  activity_screen_handwriting.xml  activity_select_region.xml  bottom_sheet_filter.xml  dialog_api_log.xml  dialog_edit_tags.xml  dialog_handwriting_input.xml  dialog_question_confirm.xml  dialog_scan_choice.xml  dialog_scanning.xml  dialog_tag_sort.xml  drawing_toolbar.xml  fragment_math_practice.xml  fragment_notes_and_cards.xml  fragment_pro.xml  fragment_questions.xml  item_answer_version.xml  (+23 more)
app/src/main/res/layout-land/: item_question_card.xml
app/src/main/res/menu/: bottom_navigation.xml  flashcards_list_menu.xml  main_menu.xml  manual_import_menu.xml  math_practice_menu.xml  note_edit_menu.xml  notes_list_menu.xml  questions_fragment_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
app/src/test/java/com/gongkao/cuotifupan/: ExampleUnitTest.kt
gradle/: libs.versions.toml
(+120 files in other folders)
